Bug 138789 - Line Width and Transparency in sidebar isn't disabled for chart area when line is set to none
Summary: Line Width and Transparency in sidebar isn't disabled for chart area when lin...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0.0.beta2 target:7.2.0 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart Sidebar-Properties-Line
  Show dependency treegraph
 
Reported: 2020-12-10 00:27 UTC by Aron Budea
Modified: 2020-12-17 13:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot in 7.2 (73.17 KB, image/png)
2020-12-10 00:27 UTC, Aron Budea
Details
Screenshot in 6.4 (84.86 KB, image/png)
2020-12-10 00:28 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2020-12-10 00:27:57 UTC
Created attachment 168020 [details]
Screenshot in 7.2

- Start an empty Writer document, make sure the sidebar is open, and insert a chart,
- Click in the document, away from the chart twice (for some reason we can't get into chart edit mode right away),
- Double-click in the chart, somewhere in the white area outside the actual chart to get into chart edit mode,
+ in older versions (eg. 7.0) you had to click once more in the same white area to select the "Chart Area", in 
- Check Line properties in the sidebar.

=> Line is set to none by default (as expected), but Width and Color aren't disabled as they should be. They should only be enabled if there is a line set.
This bug report is about the Width.

Observed in LO 7.2.0.0.alpha0+ (b541cd9a8038810ce449f8c49ae179d9d6eaa7e8), 7.0.0.3 / Ubuntu.
No issue in 6.4.0.3. => regression

Bibisected to the following commit using repo bibisect-linux-64-7.0. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=ee6b19259647aae001ff0f4150cbb0483e6786ec
author		Caolán McNamara <caolanm@redhat.com>	2020-01-24 16:14:44 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-01-25 18:32:15 +0100

tdf#130157 Line Sidebar width, color, transparency, etc didn't work
Comment 1 Aron Budea 2020-12-10 00:28:37 UTC
Created attachment 168021 [details]
Screenshot in 6.4
Comment 2 Aron Budea 2020-12-10 00:31:30 UTC
The Transparency modifier is also enabled starting with the same commit.
Comment 3 Aron Budea 2020-12-10 00:53:16 UTC Comment hidden (obsolete)
Comment 4 Caolán McNamara 2020-12-10 10:16:27 UTC
this works for the "normal" case, but not in the chart case as it has a replacement listener for the line style
Comment 5 Commit Notification 2020-12-10 13:02:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/df264ca516a1cdbd24342d399f843bb3ae16c138

Resolves: tdf#138789 disable widgets on 'none' when status changes

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-12-10 13:02:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/248ceefbbc3be28f7192b986d5d34985106268e1

Resolves: tdf#138789 disable widgets on 'none' when status changes

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-12-10 13:04:37 UTC
fixed in master and 7-1, backport to 7-0 in gerrit
Comment 8 Xisco Faulí 2020-12-17 13:02:49 UTC
Verified in

Version: 7.2.0.0.alpha0+
Build ID: 4484accf4d331a95ebf8475d6cd91950f4c27bcc
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 9 Commit Notification 2020-12-17 13:04:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/4b87577ea3f80e1e3df5ce1b492dea267577f072

Resolves: tdf#138789 disable widgets on 'none' when status changes

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.