Resolves: tdf#138789 disable widgets on 'none' when status changes

instead of when chage is dispatched, the chart case has its own
dispatcher that disables the base class one. This fixes the reported
problem, and the related problem of updating when moving focus from
one line that has style 'none' to one that doesn't, and vice-versa,
where no change is dispached on received on context change

Change-Id: I6afb396e75ba93c13fcae71c52618cfce7f9cecb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/107527
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>